add new plan form

--- a/app/globals.css
+++ b/app/globals.css
@@ -77,6 +77,11 @@
     @apply bg-background text-foreground;
     background-color: var(--main-background);
   }
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
 html,
 body,
